fix: dynamodb saves and exclusions and docs, comments, etc.
